updated font colors

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div class="container">
     <div class="hero">
       <h2>Social Media Dashboard</h2>
-      <p>Total Followers: 23,004</p>
+      <p class="paragraph">Total Followers: 23,004</p>
       <nav>
         Dark Mode
         <label class="switch">
@@ -96,43 +96,43 @@
       <div class="facebook-bottom card-2">
         <div class="row-1"><span class="views">Page Views</span> <img class="icon" src="images/icon-facebook.svg"></div>
         <div class="row-2"><span class="amount">87</span>
-        <img class="icon2"src="images/icon-up.svg"> <span class="percentage">3%</span></div>
+        <img class="icon2"src="images/icon-up.svg"> <span class="percentage-up">3%</span></div>
       </div>
       <div class="facebook-bottom card-2">
         <div class="row-1"><span class="views">Likes</span> <img class="icon" src="images/icon-facebook.svg"></div>
         <div class="row-2"><span class="amount">52</span>
-        <img class="icon2" src="images/icon-down.svg"> <span class="percentage">2%</span></div>
+        <img class="icon2" src="images/icon-down.svg"> <span class="percentage-down">2%</span></div>
       </div>
       <div class="instagram-bottom card-2">
         <div class="row-1"><span class="views">Likes</span> <img class="icon" src="images/icon-instagram.svg"></div>
         <div class="row-2"><span class="amount">5462</span>
-          <img class="icon2" src="images/icon-up.svg"> <span class="percentage">2257%</span></div>
+          <img class="icon2" src="images/icon-up.svg"> <span class="percentage-up">2257%</span></div>
       </div>
       <div class="instagram-bottom card-2">
         <div class="row-1"><span class="views">Profile Views</span> <img class="icon" src="images/icon-instagram.svg"></div>
         <div class="row-2"><span class="amount">52k</span>
-        <img class="icon2" src="images/icon-up.svg"> <span class="percentage">1375%</span></div>
+        <img class="icon2" src="images/icon-up.svg"> <span class="percentage-up">1375%</span></div>
       </div>
 
       <div class="twitter-bottom card-2">
         <div class="row-1"><span class="views">Retweets</span> <img class="icon" src="images/icon-twitter.svg"></div>
         <div class="row-2"><span class="amount">117</span>
-        <img class="icon2" src="images/icon-up.svg"> <span class="percentage">303%</span></div>
+        <img class="icon2" src="images/icon-up.svg"> <span class="percentage-up">303%</span></div>
       </div>
       <div class="twitter-bottom card-2">
         <div class="row-1"><span class="views">Likes</span> <img class="icon" src="images/icon-twitter.svg"></div>
         <div class="row-2"><span class="amount">507</span>
-        <img class="icon2" src="images/icon-up.svg"> <span class="percentage">553%</span></div>
+        <img class="icon2" src="images/icon-up.svg"> <span class="percentage-up">553%</span></div>
       </div>
       <div class="youtube-bottom card-2">
         <div class="row-1"><span class="views">Likes</span> <img class="icon" src="images/icon-youtube.svg"></div>
         <div class="row-2"><span class="amount">107</span>
-        <img class="icon2" src="images/icon-down.svg"> <span class="percentage">19%</span></div>
+        <img class="icon2" src="images/icon-down.svg"> <span class="percentage-down">19%</span></div>
       </div>
       <div class="youtube-bottom card-2">
         <div class="row-1"><span class="views">Total Views</span> <img class="icon" src="images/icon-youtube.svg"></div>
         <div class="row-2"><span class="amount">1407</span>
-          <img class="icon2" src="images/icon-down.svg"> <span class="percentage">12%</span></div>
+          <img class="icon2" src="images/icon-down.svg"> <span class="percentage-down">12%</span></div>
       </div>
     </div>
   </div>
