updates to dark mode

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
       </nav>
       <div class="stats">
-        <div class="facebook card-1">
+        <div class="facebook card-1 dark">
           <div class="top-boxes">
             <div class="picture-group-1">
               <img src="images/icon-facebook.svg">
@@ -43,49 +43,49 @@
             </div>
           </div>
         </div>
-      </div>
-      <div class="twitter card-1">
-        <div class="top-boxes">
-          <div class="picture-group-1">
-            <img src="images/icon-twitter.svg">
-            <span class="handle">@nathanf</span>
-          </div>
-          <span class="number">1044</span>
-          <span class="followers">Followers</span>
-          <br>
-          <div class="picture-group-2">
-            <img src="images/icon-up.svg">
-            <span class="up-down-positive">99 Today</span>
-          </div>
-        </div>
-      </div>
-      <div class="instagram card-1">
-        <div class="top-boxes">
-          <div class="picture-group-1">
-            <img src="images/icon-instagram.svg">
-            <span class="handle">@realnathanf</span>
-          </div>
-          <span class="number">11k</span>
-          <span class="followers">Followers</span>
-          <div class="picture-group-2">
+        <div class="twitter card-1 dark">
+          <div class="top-boxes">
+            <div class="picture-group-1">
+              <img src="images/icon-twitter.svg">
+              <span class="handle">@nathanf</span>
+            </div>
+            <span class="number">1044</span>
+            <span class="followers">Followers</span>
             <br>
-            <img src="images/icon-up.svg">
-            <span class="up-down-positive">1099 Today</span>
+            <div class="picture-group-2">
+              <img src="images/icon-up.svg">
+              <span class="up-down-positive">99 Today</span>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="youtube card-1">
-        <div class="top-boxes">
-          <div class="picture-group-1">
-            <img src="images/icon-youtube.svg">
-            <span class="handle">Nathan F.</span>
+        <div class="instagram card-1 dark">
+          <div class="top-boxes">
+            <div class="picture-group-1">
+              <img src="images/icon-instagram.svg">
+              <span class="handle">@realnathanf</span>
+            </div>
+            <span class="number">11k</span>
+            <span class="followers">Followers</span>
+            <div class="picture-group-2">
+              <br>
+              <img src="images/icon-up.svg">
+              <span class="up-down-positive">1099 Today</span>
+            </div>
           </div>
-          <span class="number">8239</span>
-          <span class="followers">Subscribers</span>
-          <br>
-          <div class="picture-group-2">
-            <img src="images/icon-down.svg">
-            <span class="up-down-negative">144 Today</span>
+        </div>
+        <div class="youtube card-1 dark">
+          <div class="top-boxes">
+            <div class="picture-group-1">
+              <img src="images/icon-youtube.svg">
+              <span class="handle">Nathan F.</span>
+            </div>
+            <span class="number">8239</span>
+            <span class="followers">Subscribers</span>
+            <br>
+            <div class="picture-group-2">
+              <img src="images/icon-down.svg">
+              <span class="up-down-negative">144 Today</span>
+            </div>
           </div>
         </div>
       </div>
@@ -93,44 +93,47 @@
 
     <h2>Overview - Today</h2>
     <div class="stats-today">
-      <div class="facebook-bottom card-2">
-        <div class="row-1"><span class="views">Page Views</span> <img class="icon" src="images/icon-facebook.svg"></div>
+      <div class="facebook-bottom card-2 dark">
+        <div class="row-1"><span class="views">Page Views</span> <img class="icon" src="images/icon-facebook.svg">
+        </div>
         <div class="row-2"><span class="amount">87</span>
-        <img class="icon2"src="images/icon-up.svg"> <span class="percentage-up">3%</span></div>
+          <img class="icon2" src="images/icon-up.svg"> <span class="percentage-up">3%</span></div>
       </div>
-      <div class="facebook-bottom card-2">
+      <div class="facebook-bottom card-2 dark">
         <div class="row-1"><span class="views">Likes</span> <img class="icon" src="images/icon-facebook.svg"></div>
         <div class="row-2"><span class="amount">52</span>
-        <img class="icon2" src="images/icon-down.svg"> <span class="percentage-down">2%</span></div>
+          <img class="icon2" src="images/icon-down.svg"> <span class="percentage-down">2%</span></div>
       </div>
-      <div class="instagram-bottom card-2">
+      <div class="instagram-bottom card-2 dark">
         <div class="row-1"><span class="views">Likes</span> <img class="icon" src="images/icon-instagram.svg"></div>
         <div class="row-2"><span class="amount">5462</span>
           <img class="icon2" src="images/icon-up.svg"> <span class="percentage-up">2257%</span></div>
       </div>
-      <div class="instagram-bottom card-2">
-        <div class="row-1"><span class="views">Profile Views</span> <img class="icon" src="images/icon-instagram.svg"></div>
+      <div class="instagram-bottom card-2 dark">
+        <div class="row-1"><span class="views">Profile Views</span> <img class="icon" src="images/icon-instagram.svg">
+        </div>
         <div class="row-2"><span class="amount">52k</span>
-        <img class="icon2" src="images/icon-up.svg"> <span class="percentage-up">1375%</span></div>
+          <img class="icon2" src="images/icon-up.svg"> <span class="percentage-up">1375%</span></div>
       </div>
 
-      <div class="twitter-bottom card-2">
+      <div class="twitter-bottom card-2 dark">
         <div class="row-1"><span class="views">Retweets</span> <img class="icon" src="images/icon-twitter.svg"></div>
         <div class="row-2"><span class="amount">117</span>
-        <img class="icon2" src="images/icon-up.svg"> <span class="percentage-up">303%</span></div>
+          <img class="icon2" src="images/icon-up.svg"> <span class="percentage-up">303%</span></div>
       </div>
-      <div class="twitter-bottom card-2">
+      <div class="twitter-bottom card-2 dark">
         <div class="row-1"><span class="views">Likes</span> <img class="icon" src="images/icon-twitter.svg"></div>
         <div class="row-2"><span class="amount">507</span>
-        <img class="icon2" src="images/icon-up.svg"> <span class="percentage-up">553%</span></div>
+          <img class="icon2" src="images/icon-up.svg"> <span class="percentage-up">553%</span></div>
       </div>
-      <div class="youtube-bottom card-2">
+      <div class="youtube-bottom card-2 dark">
         <div class="row-1"><span class="views">Likes</span> <img class="icon" src="images/icon-youtube.svg"></div>
         <div class="row-2"><span class="amount">107</span>
-        <img class="icon2" src="images/icon-down.svg"> <span class="percentage-down">19%</span></div>
+          <img class="icon2" src="images/icon-down.svg"> <span class="percentage-down">19%</span></div>
       </div>
-      <div class="youtube-bottom card-2">
-        <div class="row-1"><span class="views">Total Views</span> <img class="icon" src="images/icon-youtube.svg"></div>
+      <div class="youtube-bottom card-2 dark">
+        <div class="row-1"><span class="views">Total Views</span> <img class="icon" src="images/icon-youtube.svg">
+        </div>
         <div class="row-2"><span class="amount">1407</span>
           <img class="icon2" src="images/icon-down.svg"> <span class="percentage-down">12%</span></div>
       </div>
@@ -146,7 +149,12 @@
     function myFunction() {
       var element = document.body;
       element.classList.toggle("dark-mode");
+      var cards = document.getElementsByTagName("div");
+      for (var i = 0; i < cards.length; i++) {
+        cards[i].classList.toggle("light-cards");
+      }
     }
+
   </script>
 </body>
 
