--- a/index.html
+++ b/index.html
@@ -93,45 +93,45 @@
 
     <h2>Overview - Today</h2>
     <div class="stats-today">
-      <div class="facebook-bottom card-2 dark">
+      <div class="facebook-bottom1 card-2 dark">
         <div class="row-1"><span class="views">Page Views</span> <img class="icon" src="images/icon-facebook.svg">
         </div>
         <div class="row-2"><span class="amount">87</span>
           <img class="icon2" src="images/icon-up.svg"> <span class="percentage-up">3%</span></div>
       </div>
-      <div class="facebook-bottom card-2 dark">
+      <div class="facebook-bottom2 card-2 dark">
         <div class="row-1"><span class="views">Likes</span> <img class="icon" src="images/icon-facebook.svg"></div>
         <div class="row-2"><span class="amount">52</span>
           <img class="icon2" src="images/icon-down.svg"> <span class="percentage-down">2%</span></div>
       </div>
-      <div class="instagram-bottom card-2 dark">
+      <div class="instagram-bottom1 card-2 dark">
         <div class="row-1"><span class="views">Likes</span> <img class="icon" src="images/icon-instagram.svg"></div>
         <div class="row-2"><span class="amount">5462</span>
           <img class="icon2" src="images/icon-up.svg"> <span class="percentage-up">2257%</span></div>
       </div>
-      <div class="instagram-bottom card-2 dark">
+      <div class="instagram-bottom2 card-2 dark">
         <div class="row-1"><span class="views">Profile Views</span> <img class="icon" src="images/icon-instagram.svg">
         </div>
         <div class="row-2"><span class="amount">52k</span>
           <img class="icon2" src="images/icon-up.svg"> <span class="percentage-up">1375%</span></div>
       </div>
 
-      <div class="twitter-bottom card-2 dark">
+      <div class="twitter-bottom1 card-2 dark">
         <div class="row-1"><span class="views">Retweets</span> <img class="icon" src="images/icon-twitter.svg"></div>
         <div class="row-2"><span class="amount">117</span>
           <img class="icon2" src="images/icon-up.svg"> <span class="percentage-up">303%</span></div>
       </div>
-      <div class="twitter-bottom card-2 dark">
+      <div class="twitter-bottom2 card-2 dark">
         <div class="row-1"><span class="views">Likes</span> <img class="icon" src="images/icon-twitter.svg"></div>
         <div class="row-2"><span class="amount">507</span>
           <img class="icon2" src="images/icon-up.svg"> <span class="percentage-up">553%</span></div>
       </div>
-      <div class="youtube-bottom card-2 dark">
+      <div class="youtube-bottom1 card-2 dark">
         <div class="row-1"><span class="views">Likes</span> <img class="icon" src="images/icon-youtube.svg"></div>
         <div class="row-2"><span class="amount">107</span>
           <img class="icon2" src="images/icon-down.svg"> <span class="percentage-down">19%</span></div>
       </div>
-      <div class="youtube-bottom card-2 dark">
+      <div class="youtube-bottom2 card-2 dark">
         <div class="row-1"><span class="views">Total Views</span> <img class="icon" src="images/icon-youtube.svg">
         </div>
         <div class="row-2"><span class="amount">1407</span>
